...
        android:textStyle="bold"
        android:layout_marginTop="35dp"
        android:padding="10dp"
        />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvAppName"
        android:layout_marginTop="80dp"
        android:padding="15dp"
        android:text="Sign In"
...
