...
        android:layout_marginRight="15dp"
        android:layout_alignParentRight="true"
        android:padding="10dp"
        android:src="@drawable/ic_info" />

    <TextView
        android:id="@+id/tvLastFace"
        android:layout_width="wrap_content"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="Here's who was last at the door..."
...
