...

        <item
            android:id="@+id/nav_faces"
            android:title="Faces" />

        <item
            android:id="@+id/nav_settings"
            android:title="Settings" />


    </group>
    <item
        android:id="@+id/nav_logout"
...
